# libdsys

./: AUTHORS  Makefile.am  Makefile.in  README.md  VERSION  aclocal.m4  config.status  configure  configure.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: Makefile.am  Makefile.in  README  README.md
examples/.deps/: collect.P  dtype.P  echoing.P  exchange.P  farm.P  fft.P  fft_iperm.P  fft_permute.P  gauss.P  gauss_pipeline.P  gauss_replicate.P  mandelbrot.P  matrix_gen.P  matrix_mul.P  odd_even.P  pi.P  pi_dsys.P  pi_mpi.P  pipeline.P  reduce.P  replicate.P  sieve.P  spread.P
examples/common/: Makefile.am  Makefile.in  example2.result  fft.c  fft_iperm.c  gauss_pipeline.c  gauss_replicate.c  mandel_farm.c  mandelbrot.c  mandelbrot_refined.c  matrix_gen.c  matrix_mul.c  mpi_mva.c  mva.c  mva_gen.c  odd_even.c  pi_dsys.c  pi_mpi.c  test.data
examples/common/.deps/: fft.Po  fft_iperm.Po  gauss_pipeline.Po  gauss_replicate.Po  mandelbrot.Po  mandelbrot_refined.Po  matrix_gen.Po  matrix_mul.Po  mpi_mva.Po  mva.Po  odd_even.Po  pi_dsys.Po  pi_mpi.Po
examples/skeletons/: Makefile.am  Makefile.in  all2all.c  farm.c  gauss_pipeline.c  pipeline.c  pipeline_farm.aux  pipeline_farm.c  pipeline_farm.eps  pipeline_farm.fig  pipeline_farm.ps  pipeline_farm.tex
examples/skeletons/.deps/: all2all.Po  farm.Po  pipeline.Po  pipeline_farm.Po
examples/usage/: Makefile.am  Makefile.in  collect.c  collect_any.c  dtype.c  error.c  exchange.c  farm.c  plist.c  reduce.c  replicate.c  spread.c
examples/usage/.deps/: collect.Po  collect_any.Po  dtype.Po  exchange.Po  farm.Po  plist.Po  reduce.Po  replicate.Po  spread.Po
libdsys/: Makefile.am  Makefile.in  base.c  base.h  bits.c  bits.h  branch.c  branch.h  collect.c  collect.h  collect_any.c  collect_any.h  common.h  config-h.in  config.h  dsys.h  dtype.c  dtype.h  error.c  error.h  farm.c  farm.h  fdutils.c  fdutils.h  iface.c  iface.h  infmpi.c  infmpi.h  iskel.c  iskel.h  ltab.c  ltab.h  mem.c  mem.h  pipe.c  pipe.h  plist.c  plist.h  queue.c  queue.h  (+19 more)
libdsys/.deps/: base.Po  bits.Po  branch.Po  collect.Po  collect_any.Po  dtype.Po  error.Po  farm.Po  fdutils.Po  iface.Po  infmpi.Po  iskel.Po  ltab.Po  mem.Po  pipe.Po  plist.Po  queue.Po  reduce.Po  replicate.Po  service.Po  sockets.Po  spread.Po  threads.Po  timing.Po  variable.Po
m4/: get_libdsys_version  libdsys_get_version.m4
perf/: Makefile.am  benchmark.c  coll_bcast.c  coll_gather.c  coll_reduce.c  coll_scatter.c  convert.c  evaluate  exchange.c  get_latency.c  perf.c  plot.gnuplot  put_latency.c  test_and_generate
perf/.deps/: benchmark.Po  coll_bcast.Po  coll_gather.Po  coll_scatter.Po  exchange.Po  get_latency.Po  put_latency.Po
